--- a/frontend/product.html
+++ b/frontend/product.html
@@ -20,7 +20,7 @@
       <div class="container d-flex prod-div">
         <aside class="filter">
           <ul>
-            <li onclick="filterData(false)">All Products</li>
+            <li onclick="window.location = 'product.html'">All Products</li>
             <li onclick="filterData('5b6899953d1a866534f516e2')">Fruits & Vegetables</li>
             <li onclick="filterData('5b6899123d1a866534f516de')">Bakery Cakes and Dairy</li>
             <li onclick="filterData('5b675e5e5936635728f9fc30')">Beverages</li>
